# ez-archive

./: CMakeLists.txt  README.md
cmake/: preconfig.cmake
include/ez/archive/: Defines.hpp  ReadArchive.hpp  WriteArchive.hpp
src/: Defines.cpp  ReadArchive.cpp  WriteArchive.cpp
test/: CMakeLists.txt  test.cpp
test/assets/: sprites.7z
